--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-easy-lightbox": "^0.14.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.0"
   },
